cmake_minimum_required(VERSION 3.5.0)
project(pdb)

file(GLOB_RECURSE PDB_C_SOURCE_FILES "pdb/source/*.c")
set(PDB_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/pdb/source/")
add_library(pdb ${PDB_C_SOURCE_FILES})
target_compile_options(pdb PRIVATE -Wall -Wextra)
target_include_directories(pdb PRIVATE ${PDB_INCLUDE_DIRS})
set_target_properties(pdb PROPERTIES C_STANDARD 23 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)

file(GLOB_RECURSE DUMPER_C_SOURCE_FILES "dumper/source/*.c")
set(DUMPER_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/dumper/source/")
add_executable(dumper ${DUMPER_C_SOURCE_FILES})
target_compile_options(dumper PRIVATE -Wall -Wextra)
target_include_directories(dumper PRIVATE ${DUMPER_INCLUDE_DIRS} ${PDB_INCLUDE_DIRS})
target_link_libraries(dumper pdb)
set_target_properties(dumper PROPERTIES C_STANDARD 23 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
